[package]
authors = ["Samlet <xiaofei.wu@gmail.com>"]
name = "cc-sandbox"
version = "0.1.0"
edition = "2018"

[lib]
name = "cc_sandbox"
crate-type = ["cdylib"]

[dependencies]
rayon = "1.0.2"

# ⊕ [`dyld: Symbol not found: _PyExc_SystemError` in tests if there is `#[pymethods]` in project ·
# Issue #340 · PyO3/pyo3](https://github.com/PyO3/pyo3/issues/340)
#pyo3 = { version="0.13", features = ["extension-module"] }
#pyo3 = { version="0.13" }

log = "0.4"
env_logger = "0.8.3"
anyhow = "1.0"
futures = "0.3"
paw = "1.0"
structopt = { version = "0.3", features = [ "paw" ] }
itertools = "0.10"
thiserror = "1.0"
lazy_static = "1.4.0"
Inflector = "0.11.4"

serde = "1.0"
serde_json = "1.0.11"
serde_derive = "1.0"
chrono = { version = "0.4.0", features = ["serde"] }

reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["macros", "time"] }

[dependencies.pyo3]
version = "0.13"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

